JOJ-108: Fix 'map server down' message; fix bug caused by entering color range wrong way round; zoom / panning on graph restricted to time axis; fix weird looking whitespace when graph is first initialising.

--- a/majic/joj/public/layout/map.css
+++ b/majic/joj/public/layout/map.css
@@ -48,7 +48,8 @@
         }
         td#cell-map {
             width:99%;
-            padding:0px
+            padding:0px;
+            vertical-align:top;
         }
         div#panel-div {
             overflow-y:auto;
